more fixes. use updated names for teaser graphics in file paper/01-introduction.tex
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/paper/01-introduction.tex
+++ b/paper/01-introduction.tex
@@ -19,27 +19,24 @@ Consequently, several software-level reliability techniques have evolved, e.g., 
 		\graphicspath{{results/ssb/}}
 		\null
 		\begin{subfigure}[t]{1in}
-			\input{results/ssb/runtimes.tex}
-			%\caption{Runtime}
+			\input{results/ssb/teaser_runtime}
 			\caption{Runtime}
-			\label{fig:teaser:runtime}%
+			\label{fig:teaser:runtime}
 		\end{subfigure}
 		\hfill
 		\begin{subfigure}[t]{1in}
-			\input{results/ssb/consumption.tex}
-			%\caption{Memory Consumption}
+			\input{results/ssb/teaser_consumption}
 			\caption{Storage}
-			\label{fig:teaser:memory}%
+			\label{fig:teaser:memory}
 		\end{subfigure}
 		\hfill
 		\begin{subfigure}[t]{0.8in}
-			\input{results/ssb/legend.tex}
+			\input{results/ssb/teaser_legend}
 		\end{subfigure}
 		\null
 	}
 	\vspace{-0.2cm}
-%	\caption{Comparing the unprotected in-memory database concept with protected concepts of double modular redundancy (DMR) and our \emph{AHEAD} approach using the star-schema benchmark~\cite{DBLP:journals/corr/Sanchez16a}. More details in Section~\ref{sec:SSBEval}.}
-\caption{Relative comparison using the star-schema benchmark~\cite{DBLP:journals/corr/Sanchez16a}. More details in Section~\ref{sec:SSBEval}.}
+	\caption{Relative comparison using the star-schema benchmark~\cite{DBLP:journals/corr/Sanchez16a}. More details in Section~\ref{sec:SSBEval}.}
 	\label{fig:teaser}
 	\vspace{-0.5cm}
 \end{figure}
