--- a/paper/sigmod2018.tex
+++ b/paper/sigmod2018.tex
@@ -7,6 +7,8 @@
 \WarningFilter{biblatex}{Patching footnotes failed}
 \WarningFilter{relsize}{Failed to get list of font sizes}
 \usepackage[utf8]{inputenc}
+\usepackage[american]{babel}
+\usepackage{csquotes}
 \usepackage{graphicx}
 \usepackage{paralist}
 \usepackage{xcolor}
