CMakeLists.txt + tools/CMakeLists.txt: generate restiny_t=32bit executables and remove some commented out code include/util/resilience.hpp: use a macro definition to switch between 16-bit and 32-bit restiny_t common.conf: disable output of the turboboost.sh script, again modular_inverse.sh: fix key names paper/sigmod2018.tex: try to get the linux miktex pdflatex output the same as under Windows (=?Q§%IÄ§'§% LATEX)
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/paper/sigmod2018.tex
+++ b/paper/sigmod2018.tex
@@ -7,7 +7,7 @@
 \WarningFilter{biblatex}{Patching footnotes failed}
 \WarningFilter{relsize}{Failed to get list of font sizes}
 \usepackage[utf8]{inputenc}
-\usepackage[american]{babel}
+\usepackage[english]{babel}
 \usepackage{csquotes}
 \usepackage{graphicx}
 \usepackage{paralist}
@@ -90,6 +90,7 @@
 
 \providecommand\={}
 \renewcommand{\=}[1][]{\hyp{}#1}
+\hyphenation{mul-ti-pli-ca-tive}
 
 \newtheorem{Definition}{Definition}%[section]
 \newcommand{\myequiv}[1]{\ensuremath{\mathrel{\overset{\makebox[0pt]{\mbox{\tiny\sffamily #1}}}{\equiv}}}}
